# SubScript

./: .gitignore  README.md  pyproject.toml
.github/workflow/: pytest.yml
.github/workflows/: main.yml
subscript/: defaults.py  macro.py  macros.py  nfilters.py  out.txt  parameters.py  tabulatehdf5.py  wrappers.py
subscript/scripts/: basic.py  histograms.py  nfilters.py  spatial.py
tests/: test.py  test_basic.py  test_histograms.py  test_macros.py  test_nfilters.py  test_nodes.py  test_tabulatehdf5.py  test_wrappers.py
