[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = ["numpy","pandas","scipy","h5py", "scikit-learn"]
name = "subscript"
version = "0.0.1"
authors = [
  { name="Charles Gannon", email="cgannon@ucmerced.edu" },
]
description = "Utility functions for analyzing subhalo distributions."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[tool.hatch.build.targets.wheel]
packages = ["subscript"]

[project.urls]
"Homepage" = "https://github.com/cgannonucm/SubScript"
"Bug Tracker" = "https://github.com/cgannonucm/SubScript"